k8s/client-cluster-ip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: client-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: web
  # like nodePort but only for internal cluster communication
  ports:
    - port: 3000 # how the service is exposed to other pods in the cluster
      targetPort: 3000 # what is the port of the container that is being exposed
